# sse_scim

./: .gitignore  README.md  docker-compose.yaml  requirements.txt  setup.py
api/: Dockerfile  demo.py  requirements.txt  serve.py
api/app/: config.py  noun_chunks.py  parser.py  types.py  utils.py
configs/: parser.yaml
demand-details/: pyproject.toml
demand-details/demand_details/: __main__.py
demand-details/demand_details/scorers/: base.py
modeling/query_generation/: config.py  finetune.py  requirements.txt  test.py
modeling/query_generation/models/: __init__.py  base.py  label_transfer.py  metrics.py  schedulers.py  seq2seq.py  tokencls.py
old/pdf_scorer/: setup.py
old/pdf_scorer/mmda_pdf_scorer/: predictors.py  utils.py
pdf2sents/: pyproject.toml
pdf2sents/pdf2sents/: __main__.py  pipeline.py  visualization.py
pdf_scorer/: setup.py
pdf_scorer/mmda_pdf_scorer/: config.py  parser.py  scorers.py  types.py
preprocessing/: README.md  requirements.txt
preprocessing/from_pdf/: __main__.py  layout_tools.py  make_output.py  skimming_predictor.py  typed_predictors.py  visualization.py
scripts/: qasper_count_match.py
src/mmda_pdf_scorer/: config.py  parser.py  scorers.py  types.py
sse_skimming/: README.md  example.py  pyproject.toml
sse_skimming/scripts/: combine_sse_output.py  run_all_naacl_papers.sh  run_batch.sh
sse_skimming/sse_skimming/: __main__.py  heuristics.py  predictor.py
sse_skimming/weak_label/: __main__.py  labeling_utils.py  lfs.py  types.py  word_bank.py
