[tool.poetry]
name = "demand-details"
version = "0.1.0"
description = "Request "
authors = ["Luca Soldaini <lucas@allenai.org>"]
license = "Apache-2.0"
homepage = "https://github.com/allenai/paper-details-on-demand/tree/main/demand-details"
repository = "https://github.com/allenai/paper-details-on-demand/"
readme = "README.md"
packages = [
    { include = "demand_details" },
]

[[tool.poetry.source]]
name = "s2-pypi0"
url = "https://pip.s2.allenai.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.8"
pdf2sents = "^0.1.3"
platformdirs = "^2.5.2"
springs = "^1.2.5.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
